# symtern

./: .travis.yml  Cargo.toml  LICENSE-MIT  README.md  mod.rs  nameable.rs  private.rs  scope.rs  tests.rs
.cargo/: config
benches/: random-strings.rs
examples/: combining-adaptors.rs  create-resolve.rs  error-handling.rs  intro.rs  short.rs  symbols-are-copy.rs  you-can-intern-anything.rs
scripts/: add-license-header  sync-examples
scripts/data/: license-header.rs
scripts/lib/: config-hash.rb  parse.rb  parser.rb
src/: basic.rs  core.rs  error.rs  lib.rs  prelude.rs  short.rs  sym.rs  traits.rs
src/adaptors/: inline.rs  luma.rs  mod.rs
src/short/: mod.rs  private.rs  tests.rs
tests/: tests.rs
tests/compile-fail/: cannot-intern-with-active-resolved-ref.rs  losing-symbols.rs  luma-is-lifetime-safe.rs  naive-lifetime-safety.rs
tests/run-fail/: luma-panics-on-intern-with-active-resolved-ref.rs  panics-when-resolving-symbol-on-wrong-resolver.rs
