[package]
name = "symtern"
version = "0.1.0"
authors = ["Collin J. Sutton <collin.sutton@gmail.com>"]
description = "Fast general-purpose interners for every use case"

documentation = "https://docs.rs/symtern"
homepage = "https://github.com/insaneinside/symtern"
repository = "https://github.com/insaneinside/symtern"

readme = "README.md"
keywords = ["interner", "interning", "symbol", "string", "pool"]
license = "Apache-2.0/MIT"

exclude = ["scripts"]

[features]
default = ["fnv"]

[lib]
path = "src/lib.rs"

[[test]]
name="tests"
path="tests/tests.rs"

[dev-dependencies]
rand = "^0.3.0"
lazy_static = "^0.2.0"
compiletest_rs = "^0.2.0"

[dependencies]
num-traits = "^0.1.0"
fnv = { version = "^1.0", optional = true }
